Added Admin flow test using API_create order